--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -3,14 +3,32 @@
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 <ImageView
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:src="@drawable/make_it_even_logo"
+    android:layout_width="250dp"
+    android:layout_height="150dp"
+    android:src="@drawable/makeiteven_v2"
+    android:id="@+id/game_logo"
+    android:layout_centerHorizontal="true"
    />
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:src="@drawable/make_it_even_icon"
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="60dp"
         android:layout_centerInParent="true"
-        />
+        android:background="@drawable/stage_btn"
+        android:text="@string/Stage_mode"
+        android:textSize="20sp"
+        android:textAllCaps="false"
+        android:id="@+id/stage_mode_btn"/>
+
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/arcade_btn"
+        android:text="@string/Arcade_mode"
+        android:textSize="20sp"
+        android:textAllCaps="false"
+        android:id="@+id/arcade_mode_btn"
+        android:layout_below="@id/stage_mode_btn"
+        android:layout_marginTop="20dp"/>
+
     </RelativeLayout>
