--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/Main_layout">
 <ImageView
     android:layout_width="250dp"
     android:layout_height="150dp"
@@ -30,5 +31,13 @@
         android:id="@+id/arcade_mode_btn"
         android:layout_below="@id/stage_mode_btn"
         android:layout_marginTop="20dp"/>
-
+<ImageButton
+    android:layout_width="50dp"
+    android:layout_height="50dp"
+    android:layout_margin="10dp"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentRight="true"
+    android:background="@drawable/setting_btn"
+    android:src="@drawable/ic_settings_black_24dp"
+    android:id="@+id/setting_btn"/>
     </RelativeLayout>
