--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -2,7 +2,9 @@
 <RelativeLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/Main_layout">
+    android:id="@+id/Main_layout"
+    android:background="@drawable/color_change">
+
 <ImageView
     android:layout_width="250dp"
     android:layout_height="150dp"
