add stage and arcade btns+ animation the animation is set specificly for thous btns so dont use them on other btn pressd/releas

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="primaryTextColor">#000000</color>
     <color name="Gray">#A7A7A7</color>
     <color name="White">#ffffff</color>
+    <color name="Transparent">#00FFFFFF</color>
 </resources>
