--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/setting_screen">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/setting_screen"
+    app:cardCornerRadius="40dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -46,4 +51,5 @@
         android:text="test accept buttn"
         android:layout_centerInParent="true"
         android:id="@+id/end"/>
-</RelativeLayout>
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
