--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,13 +14,26 @@
         android:layout_marginTop="98dp"
         android:text="Hello World!" />
 
+    <TextView
+        android:id="@+id/progress_sol"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textSize="25sp"
+        android:text="solution" />
+
     <LinearLayout
+        android:id="@+id/btn_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="160dp"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -29,17 +42,17 @@
                 android:id="@+id/btn1"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:padding="5dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
-                android:layout_margin="10dp"/>
+                android:padding="5dp" />
 
             <Button
                 android:id="@+id/btn2"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:padding="5dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
-                android:layout_margin="10dp"/>
+                android:padding="5dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -50,28 +63,65 @@
                 android:id="@+id/btn3"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:padding="5dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
-                android:layout_margin="10dp"/>
+                android:padding="5dp" />
 
             <Button
                 android:id="@+id/btn4"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                android:padding="5dp"
+                android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
-                android:layout_margin="10dp"/>
+                android:padding="5dp" />
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="60dp">
+
+        <Button
+            android:id="@+id/plus"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:text="+" />
+
+        <Button
+            android:id="@+id/minus"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:text="-" />
+
+        <Button
+            android:id="@+id/div"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:text="/" />
+
+        <Button
+            android:id="@+id/mul"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="5dp"
+            android:text="*" />
+
+
     </LinearLayout>
 
     <Button
         android:id="@+id/start_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="142dp"
-        android:layout_marginBottom="59dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="25dp"
         android:text="START" />
 
 </RelativeLayout>
