--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/setting_screen"
-    app:cardCornerRadius="40dp">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:id="@+id/root_element"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -16,10 +11,23 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Settings"
+        android:id="@+id/setting_txtv"
+        android:textSize="30sp"
+        android:layout_centerHorizontal="true"
+        style="@style/AppTheme"
+        android:textStyle="italic"
+        android:layout_marginTop="10dp"
+       />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:id="@+id/main_sound_txtv"
         android:text="@string/main_sound"
-        android:textSize="30sp"/>
+        android:textSize="18sp"
+        android:layout_below="@+id/setting_txtv"
+        android:layout_margin="10dp"/>
     <SeekBar
         android:id="@+id/seek_bar_1"
         android:layout_width="match_parent"
@@ -38,7 +46,8 @@
             android:layout_centerHorizontal="true"
             android:id="@+id/sound_efects_txtv"
             android:text="@string/sound_effects"
-            android:textSize="30sp"/>
+            android:textSize="18sp"
+            android:layout_margin="10dp"/>
         <SeekBar
             android:id="@+id/seek_bar_2"
             android:layout_width="match_parent"
@@ -46,10 +55,24 @@
             android:layout_below="@+id/sound_efects_txtv"/>
     </RelativeLayout>
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="test accept buttn"
-        android:layout_centerInParent="true"
-        android:id="@+id/end"/>
+        android:text="Reset game levels"
+        android:layout_below="@id/seek2"
+        android:id="@+id/game_reset_btn"
+        android:textAllCaps="false"
+        android:background="@drawable/reset_game"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="10dp"
+        android:clickable="true"/>
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/close_icon"
+        android:background="@color/Transparent"
+        android:layout_alignParentRight="true"
+        android:layout_margin="10dp"
+        android:id="@+id/close_btn"
+        android:clickable="true"
+        android:focusable="true"/>
     </RelativeLayout>
-</android.support.v7.widget.CardView>
