toggle buttons working

--- a/app/src/main/res/drawable/game_qube_btns.xml
+++ b/app/src/main/res/drawable/game_qube_btns.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="false">
+    <item android:state_checked="false">
         <layer-list>
             <!-- SHADOW LAYER -->
             <item android:top="4dp" >
@@ -24,7 +24,7 @@
             </item>
         </layer-list>
     </item>
-    <item android:state_pressed="true">
+    <item android:state_checked="true">
         <layer-list>
             <!-- SHADOW LAYER -->
             <item android:top="4dp" >
