--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".GameActivity">
 
     <TextView
         android:id="@+id/the_number"
@@ -17,28 +18,30 @@
     <TextView
         android:id="@+id/progress_sol"
         android:layout_width="match_parent"
-        android:gravity="center"
         android:layout_height="wrap_content"
         android:layout_below="@id/btn_layout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:textSize="25sp"
-        android:text="hint" />
+        android:gravity="center"
+        android:text="hint"
+        android:textSize="25sp" />
 
     <LinearLayout
         android:id="@+id/btn_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="160dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
+            android:id="@+id/group_choices"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tbgChildSpacingForLastRow="align"
+            app:tbgRowSpacing="5dp">
 
-            <Button
+            <ToggleButton
                 android:id="@+id/btn1"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
@@ -46,35 +49,33 @@
                 android:background="@drawable/game_qube_btns"
                 android:padding="5dp" />
 
-            <Button
+            <ToggleButton
                 android:id="@+id/btn2"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
-                android:padding="5dp" />
-        </LinearLayout>
+                android:padding="5dp"
+               />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <Button
+            <ToggleButton
                 android:id="@+id/btn3"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
-                android:padding="5dp" />
+                android:padding="5dp"
+             />
 
-            <Button
+            <ToggleButton
                 android:id="@+id/btn4"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
-                android:padding="5dp" />
-        </LinearLayout>
+                android:padding="5dp"
+                 />
+        </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
     </LinearLayout>
 
     <LinearLayout
@@ -89,7 +90,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
-            android:background="@drawable/plus_green"/>
+            android:background="@drawable/plus_green" />
 
         <Button
             android:id="@+id/minus"
@@ -105,14 +106,14 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
-            android:background="@drawable/div_blue"/>
+            android:background="@drawable/div_blue" />
 
         <Button
             android:id="@+id/mul"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="5dp"
-            android:background="@drawable/mul_green"/>
+            android:background="@drawable/mul_green" />
 
 
     </LinearLayout>
@@ -130,12 +131,11 @@
         android:id="@+id/timer_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:text="10:00"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/the_number"
+        android:layout_centerHorizontal="true"
+        android:text="TextView"
         android:textSize="24sp"
-        />
+        tools:text="10:00" />
 
 
 </RelativeLayout>
