--- a/app/src/main/res/layout/level.xml
+++ b/app/src/main/res/layout/level.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<Button android:layout_width="60dp"
-    android:layout_height="60dp"
+<Button android:layout_width="80dp"
+    android:layout_height="80dp"
     android:id="@+id/level_btn"
+    android:layout_margin="5dp"
     android:background="@drawable/game_qube_btns"
     xmlns:android="http://schemas.android.com/apk/res/android" />
