--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -5,13 +5,12 @@
     android:id="@+id/Main_layout"
     android:background="@drawable/color_change">
 
-<ImageView
-    android:layout_width="250dp"
-    android:layout_height="150dp"
-    android:src="@drawable/makeiteven_v2"
-    android:id="@+id/game_logo"
-    android:layout_centerHorizontal="true"
-   />
+    <ImageView
+        android:id="@+id/game_logo"
+        android:layout_width="331dp"
+        android:layout_height="324dp"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/makeiteven_v2" />
     <Button
         android:layout_width="250dp"
         android:layout_height="60dp"
