--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -18,6 +18,7 @@
         android:background="@drawable/stage_btn"
         android:text="@string/Stage_mode"
         android:textSize="20sp"
+        android:textStyle="bold"
         android:textAllCaps="false"
         android:id="@+id/stage_mode_btn"/>
 
@@ -31,7 +32,8 @@
         android:textAllCaps="false"
         android:id="@+id/arcade_mode_btn"
         android:layout_below="@id/stage_mode_btn"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"/>
 <ImageButton
     android:layout_width="50dp"
     android:layout_height="50dp"
