--- a/app/src/main/res/layout/level.xml
+++ b/app/src/main/res/layout/level.xml
@@ -3,5 +3,5 @@
     android:layout_height="80dp"
     android:id="@+id/level_btn"
     android:layout_margin="5dp"
-    android:background="@drawable/game_qube_btns"
+    android:background="@drawable/levels_color"
     xmlns:android="http://schemas.android.com/apk/res/android" />
