--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -35,7 +35,7 @@
         android:orientation="vertical">
 
         <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
-            android:id="@+id/group_choices"
+            android:id="@+id/group_choices_of_numbers"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tbgChildSpacingForLastRow="align"
@@ -48,9 +48,9 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
                 android:padding="5dp"
+                android:stateListAnimator="@null"
                 android:textOff=""
-                android:textOn=""
-                android:stateListAnimator="@null"/>
+                android:textOn="" />
 
             <ToggleButton
                 android:id="@+id/btn2"
@@ -59,9 +59,9 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
                 android:padding="5dp"
+                android:stateListAnimator="@null"
                 android:textOff=""
-                android:textOn=""
-                android:stateListAnimator="@null"/>
+                android:textOn="" />
 
             <ToggleButton
                 android:id="@+id/btn3"
@@ -70,9 +70,9 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
                 android:padding="5dp"
+                android:stateListAnimator="@null"
                 android:textOff=""
-                android:textOn=""
-                android:stateListAnimator="@null"/>
+                android:textOn="" />
 
             <ToggleButton
                 android:id="@+id/btn4"
@@ -81,9 +81,9 @@
                 android:layout_margin="10dp"
                 android:background="@drawable/game_qube_btns"
                 android:padding="5dp"
+                android:stateListAnimator="@null"
                 android:textOff=""
-                android:textOn=""
-                android:stateListAnimator="@null"/>
+                android:textOn="" />
         </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
     </LinearLayout>
 
@@ -94,36 +94,54 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="60dp">
 
-        <Button
-            android:id="@+id/plus"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/plus_green" />
+        <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
+            android:id="@+id/group_choices_of_operators"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/minus"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/minus_red"
+            <ToggleButton
+                android:id="@+id/plus"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/plus_green"
+                android:tag="plus"
+                android:textOff=""
+                android:textOn="" />
 
-            />
+            <ToggleButton
+                android:id="@+id/minus"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/minus_red"
+                android:tag="minus"
+                android:textOff=""
+                android:textOn=""
 
-        <Button
-            android:id="@+id/div"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/div_blue" />
+                />
 
-        <Button
-            android:id="@+id/mul"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
-            android:background="@drawable/mul_green" />
+            <ToggleButton
+                android:id="@+id/div"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/div_blue"
+                android:tag="div"
+                android:textOff=""
+                android:textOn="" />
 
+            <ToggleButton
+                android:id="@+id/mul"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/mul_green"
+                android:tag="mul"
+                android:textOff=""
+                android:textOn="" />
+
+        </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>
 
     </LinearLayout>
 
