--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -16,6 +16,16 @@
         android:text="Score:"
         android:textSize="30sp"
         />
+    <TextView
+        android:id="@+id/the_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:text="Score:"
+        android:textSize="30sp"
+        />
 
     <TextView
         android:id="@+id/progress_sol"
