--- a/app/src/main/res/layout/activity_start__screen.xml
+++ b/app/src/main/res/layout/activity_start__screen.xml
@@ -43,4 +43,19 @@
     android:background="@drawable/setting_btn"
     android:src="@drawable/ic_settings_black_24dp"
     android:id="@+id/setting_btn"/>
+    <ImageButton
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/score_btn_icon"
+        android:background="@color/Transparent"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:id="@+id/scoreBoard_btn"/>
+        />
+    <ImageButton
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/plus_darw"
+        android:background="@color/Transparent"/>
     </RelativeLayout>
