temp_scoreboard save system

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:progressBackgroundTint">#000000</item>
-        <item name="android:fontFamily">@font/itim_regular</item>
+        <item name="android:fontFamily">@font/robotoslab_regular</item>
         <item name="android:textSize">20sp</item>
     </style>
 
