--- a/app/src/main/res/layout/activity_score_board.xml
+++ b/app/src/main/res/layout/activity_score_board.xml
@@ -1,9 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".score_board">
-
-</android.support.constraint.ConstraintLayout>
+    android:layout_height="match_parent">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="HigeScore"
+        android:textSize="50sp"
+        android:id="@+id/HigeScore_tv"
+        android:visibility="invisible"/>
+<ListView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    android:id="@android:id/list"
+    android:layout_below="@+id/HigeScore_tv"
+    android:layout_margin="30dp"
+    android:background="@color/Gray">
+</ListView>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="write"
+        android:id="@+id/name_fild"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="score"
+        android:id="@+id/score_fild"
+        android:layout_toEndOf="@id/name_fild"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_test"
+        android:layout_below="@id/name_fild"
+        android:text="btn"/>
+</RelativeLayout>
